@@ -1,4 +1,5 @@
 0.02
+ - Update Module::Install to 1.08 version.
 
 0.01 2013-11-10
  - First version.
